# rust-backend-zoo

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yml
async_graphql-diesel/rocket/: .example.env  Cargo.toml
async_graphql-diesel/rocket/src/: lib.rs  main.rs
async_graphql-diesel/rocket/tests/health/: tests.rs
async_graphql-diesel/rocket/tests/meta/: tests.rs
async_graphql-diesel/rocket/tests/user/: tests.rs
async_graphql-sqlx/rocket/: .example.env  Cargo.toml  Makefile  sqlx-data.json
async_graphql-sqlx/rocket/src/: lib.rs  main.rs  routes.rs
async_graphql-sqlx/rocket/src/user/: model.rs
async_graphql-sqlx/rocket/tests/health/: tests.rs
async_graphql-sqlx/rocket/tests/meta/: tests.rs
async_graphql-sqlx/rocket/tests/user/: tests.rs
juniper-diesel/actix/: Cargo.toml
juniper-diesel/actix/migrations/2022-01-23-061743_create_user_table/: down.sql
juniper-diesel/actix/src/: lib.rs  main.rs  routes.rs
juniper-diesel/actix/src/graphql/: mod.rs
juniper-diesel/actix/src/health/: schema.rs
juniper-diesel/actix/src/user/: service.rs
juniper-diesel/actix/tests/health/: tests.rs
juniper-diesel/rocket/: .example.env  Cargo.toml  Makefile  readme.md  schema.graphql
juniper-diesel/rocket/src/: hello.rs  lib.rs  main.rs  routes.rs
juniper-diesel/rocket/src/db/: mod.rs
juniper-diesel/rocket/src/graphql/: mod.rs  resolver.rs  schema.rs
juniper-diesel/rocket/src/health/: schema.rs  service.rs
juniper-diesel/rocket/src/meta/: schema.rs
juniper-diesel/rocket/src/user/: model.rs  schema.rs  service.rs
juniper-diesel/rocket/tests/: tests.rs  utils.rs
juniper-diesel/rocket/tests/health/: schema.rs  tests.rs
juniper-diesel/rocket/tests/meta/: graphql.rs  schema.rs  tests.rs
juniper-diesel/rocket/tests/user/: graphql.rs  schema.rs  tests.rs
juniper-diesel/warp/: .example.env  Cargo.toml  Makefile
juniper-diesel/warp/src/: lib.rs  main.rs
juniper-diesel/warp/src/graphql/: resolver.rs
juniper-diesel/warp/src/meta/: service.rs
juniper-diesel/warp/src/user/: schema.rs
juniper-diesel/warp/tests/health/: tests.rs
juniper-diesel/warp/tests/meta/: tests.rs
juniper-diesel/warp/tests/user/: tests.rs
