[package]
name = "adr"
version = "0.1.0"
description = "A web service boilerplate using Rocket + Diesel + Async-GraphQL"
authors = ["azzamsa <me@azzamsa.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false , features = ["json"]}

# GraphQL
async-graphql = { version = "3.0.6" }
async-graphql-rocket = "3.0.6"

anyhow = "1.0.52"

# Database
diesel = { version = "1.4.5", features=["postgres", "r2d2"] }

# log
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
colored = "2.0.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
cynic = "1.0.0"
serde_json = "1.0.75"
