[package]
name = "asr"
version = "0.1.0"
description = "A web service boilerplate using Async-GraphQL + SQLX + Rocket"
authors = ["azzamsa <me@azzamsa.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc", default-features = false , features = ["json"]}

# GraphQL
async-graphql = { version = "3.0" }
async-graphql-rocket = "3.0"

anyhow = "1.0"

# Database
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "postgres", "offline"] }

# log
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
colored = "2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
cynic = "1.0"
serde_json = "1.0"
