[package]
name = "zoo"
version = "0.1.0"
description = "A web service boilerplate using Rocket + Diesel + Juniper (GraphQL)"
authors = ["azzamsa <me@azzamsa.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false }

# GraphQL
juniper = { version = "0.15.7" }
juniper_rocket = { version = "0.8.0" }

# log
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
colored = "2.0.0"